welcome.lessons.welcome.bat.bool1.Close10.scala.code
def close10(a:Int, b:Int): Double = {
	if( Math.abs(a-10)!=Math.abs(b-10)){
		return inf(a,b);
	}else{
		return true;
	}
}



def inf (a:Int , b:Int): Double = {
	return (  0.5  *(a + b - Math.abs(b - a)));
}
